5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1592_2043.log
== TEST (2019-05-02 12:21:47) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = (n + n2**2 + n3***3 + n4**4) / 4 
-- ERROR:
File "XXXX", line 6
    mp = (n + n2**2 + n3***3 + n4**4) / 4 
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:21:56) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = ((n + n2**2 + n3***3 + n4**4) / 4 )
-- ERROR:
File "XXXX", line 6
    mp = ((n + n2**2 + n3***3 + n4**4) / 4 )
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:22:09) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = (n + n2**2 + n3***3 + n4**4 / 4 )
-- ERROR:
File "XXXX", line 6
    mp = (n + n2**2 + n3***3 + n4**4 / 4 )
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:22:31) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = (n + n2**2 + n3**3 + n4**4 / 4 )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mp = (n + n2**2 + n3**3 + n4**4 / 4 )
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:23:06) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = (n + n2**2 + n3**3 + n4**4) / (4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mp = (n + n2**2 + n3**3 + n4**4) / (4)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:23:22) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = ((n + n2**2 + n3**3 + n4**4) / 4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mp = ((n + n2**2 + n3**3 + n4**4) / 4)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:23:44) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = ((n1 + n2**2 + n3**3 + n4**4) / 4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mp = ((n + n2**2 + n3**3 + n4**4) / 4)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:23:48) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = ((n1 + n2**2 + n3**3 + n4**4) / 4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mp = ((n + n2**2 + n3**3 + n4**4) / 4)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:24:11) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = ((n1 + n2**2 + n3**3 + n4**4) / 4)
print(mp ,2)
-- OUTPUT:
1746.0625 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:25:01) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = ((n1 + n2**0.5 + n3**3 + n4**4) / 4)
print(mp ,2)
-- OUTPUT:
1728.7288689868556 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:25:21) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = ((n1 + n2**0.5 + n3**1/3 + n4**1/4) / 4)
print(mp ,2)
-- OUTPUT:
3.874702320188996 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 12:25:28) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = ((n1 + n2**0.5 + n3**1/3 + n4**1/4) / 4)
print(mp ,2)
-- EXECUTION TIME:
0.139178
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
3.874702320188996 2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
3.432271161099481 2
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
3.318571276828185 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:25:32) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = ((n1 + n2**0.5 + n3**1/3 + n4**1/4) / 4)
print(mp ,2)
-- OUTPUT:
3.874702320188996 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:25:55) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = ((n1 + n2*2 + n3*3 + n4*4) / 4)
print(mp ,2)
-- OUTPUT:
20.5 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:26:14) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = ((n1 + n2*2 + n3*3 + n4*4) / 4)
print(round(mp ,2))
-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:26:18) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = ((n1 + n2*2 + n3*3 + n4*4) / 4)
print(round(mp ,2))
-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:29:54) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = ((n1 + n2*2 + n3*3 + n4*4) / 4)
print(round(mp ,2))
-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:31:23) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = ((n1 + n2*2 + n3*3 + n4*4) / 4*4)
print(round(mp ,2))
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:31:37) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = ((n1 + n2*2 + n3*3 + n4*4) / 4**4)
print(round(mp ,2))
-- OUTPUT:
0.32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:31:46) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = ((n1 + n2*2 + n3*3 + n4*4) / 4**4)
print(round(mp ,2))
-- OUTPUT:
0.32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:32:33) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = (n1 + n2*2 + n3*3 + n4*4 / 4)
print(round(mp ,2))
-- OUTPUT:
55.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:33:07) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = ((n1) + (n2*2) + (n3*3) + (n4*4) / 4)
print(round(mp ,2))
-- OUTPUT:
55.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:33:20) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = (((n1) + (n2*2) + (n3*3) + (n4*4)) / 4)
print(round(mp ,2))
-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:33:40) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = ((n1 + n2*2 + n3*3 + n4*4) / 4)
print(round(mp ,2))
-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:33:51) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = ((n1 + n2*2 + n3*3 + n4*4) / 10)
print(round(mp ,2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 12:33:57) 
-- CODE:
n1 = float(input("Digite a nota 1: "))
n2 = float(input("Digite a nota 2: "))
n3 = float(input("Digite a nota 3: "))
n4 = float(input("Digite a nota 4: "))

mp = ((n1 + n2*2 + n3*3 + n4*4) / 10)
print(round(mp ,2))
-- EXECUTION TIME:
0.18337
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
